CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

FIND_PACKAGE(Boost 1.55 COMPONENTS system REQUIRED)
FIND_PACKAGE(OpenSSL)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})

ADD_EXECUTABLE(server server.cpp)
ADD_EXECUTABLE(client client.cpp)

TARGET_LINK_LIBRARIES(server ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(client ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
